Fix code block default wrapping in Firefox/Safari (#55)
* move source toolbox higher up and style elements

* tiny fix

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -862,14 +862,12 @@
   white-space: pre-wrap;
 }
 
-.doc pre.highlight code,
 .doc .listingblock pre:not(.highlight),
 .doc .literalblock pre {
   background: var(--ds-background-level1);
-  /* box-shadow: inset 0 0 1.75px var(--ds-divider); */
   display: block;
   overflow-x: auto;
-  border-radius: 6px;
+  border-radius: calc(6 / var(--rem-base) * 1rem);
   padding: var(--ds-space-2);
 }
 
